[tool.poetry]
name = "uw"
version = "0.1.0"
description = ""
authors = ["Changsheng Wu <cwu@credible.com>", "Eri Sugita <esugita@credible.com>"]

[tool.poetry.dependencies]
python = "^3.10"
orjson = "^3.6.7"
pydantic = {extras = ["email"], version = "^1.9.0"}
rich = "^11.2.0"
geopy = "^2.2.0"
structlog = "^21.5.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
pytest = "^7.0.1"
pdbpp = "^0.10.3"
pep8-naming = "^0.12.1"
autopep8 = "^1.6.0"
pytest-asyncio = "^0.18.2"
pre-commit = "^2.17.0"
pytest-cov = "^3.0.0"
mkdocs = "^1.2.3"
mkdocstrings = "^0.18.1"
mkdocs-material = "^8.2.5"
mkapi = "^1.0.14"
pytest-socket = "^0.5.1"
pytest-mock = "^3.7.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
requests = "^2.27.1"
ipdb = "^0.13.9"
pytest-parallel = "^0.1.1"
httpx = "^0.22.0"
gspread = "^5.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
